# lawn-mower

./: .gitignore  38-550.txt  40-150.txt  40-250.txt  40-550.txt  45-200.txt  50-200.txt  60-550.txt  80-200.txt  example-step-motor  mount-pushik.sh  rdesktop.sh  ssh-pushik.sh
first-qt-app/: CMakeLists.txt  build.sh  main.cpp  mainwindow.ui
spin-scene/: .gitignore  CMakeLists.txt  interactmoveform.cpp  interactmoveform.h  interactmoveform.ui  lawn.cpp  lawn.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  sonic_pos.cpp  sonic_pos.h  test_rounds_reader.cpp  test_rounds_reader.h
test_raspi/: CMakeLists.txt  CMakeLists.txt.user.1740587  CMakeLists.txt.user.99d705c  build-run.sh  engine.cpp  engine.h  gpio_init.cpp  gpio_init.h  main.cpp  usonic.cpp  usonic.h
